# pytorch-extension-demo

./: CMakeLists.txt  README.md
src/: add.cu  operator.h  pybind.cc
tests/: test_add.py
